# wayland-test

./: meson.build  wayland-test.c  xdg-shell.c
